# FlameTrack

./: .coverage  .gitignore  .pre-commit-config.yaml  CITATION.cff  DataTypes.py  Dewarp.py  IR_analysis.py  QTGui.py  README.md  WebUI.py  codecov.yml  compare_exports.ipynb  crete_video.ipynb  dataset_handler.py  dewarp_manual.py  export_csv.py  flamespread.py  internship_mounia.md  main.py  pyproject.toml  quick_visual.ipynb  requirements.txt  show_selected_pints.py  streamlit_analysis.py  structure.txt  test.ipynb  test_csv.ipynb  user_config.py  video.py  visualize.ipynb
.github/workflows/: ci.yml  docs.yml  release.yml
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/.doctrees/developer_guide/: architecture.doctree  contributing.doctree  index.doctree  modules.doctree
docs/_build/html/.doctrees/user_guide/: configuration.doctree  index.doctree  installation.doctree  quickstart.doctree  troubleshooting.doctree  workflows.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/flametrack/analysis/: dataset_handler.html  flamespread.html  ir_analysis.html
docs/_build/html/_modules/flametrack/gui/: main_window.html  plotting_utils.html
docs/_build/html/_modules/flametrack/processing/: dewarping.html
docs/_build/html/_modules/flametrack/utils/: math_utils.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/developer_guide/: architecture.rst.txt  contributing.rst.txt  modules.rst.txt
docs/_build/html/_sources/user_guide/: index.rst.txt  installation.rst.txt  quickstart.rst.txt  troubleshooting.rst.txt  workflows.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_build/html/developer_guide/: architecture.html  contributing.html  index.html  modules.html
docs/_build/html/user_guide/: configuration.html  index.html  installation.html  quickstart.html  troubleshooting.html  workflows.html
docs/source/: conf.py  index.rst
docs/source/background/: index.rst  physics.rst
docs/source/developer_guide/: architecture.rst  contributing.rst
docs/source/user_guide/: configuration.rst  quickstart.rst  workflows.rst
notebooks/: analysis_pipeline.ipynb  dewarp_debug.ipynb  edge_finding_playground.ipynb
src/flametrack/: __init__.py  main.py
src/flametrack/analysis/: DataTypes.py  IR_analysis.py  config.ini  data_types.py  dataset_handler.py  edge_worker.py  flamespread.py  ir_analysis.py  user_config.py
src/flametrack/gui/: draggable_point.py  edge_preview_canvas.py  edgeresult_canvas.py  main.py  main_window.py  plotting_utils.py  selectable_imshow_canvas.py
src/flametrack/processing/: dewarping.py
src/flametrack/utils/: __init__.py  math_utils.py
src/ir_reader/analysis/: DataTypes.py  IR_analysis.py  dataset_handler.py  flamespread.py
src/ir_reader/gui/: draggable_point.py  edgeresult_canvas.py  form.ui  imshow_canvas.py  main.py  main_window.py  plotting_utils.py  ui_form.py
tests/: conftest.py  test_IR_analysis.py  test_read_ir_data.py
tests/_outputs/real_image_test/processed_data/: real_image_test_results_RCE.h5
tests/_outputs/rotation_test_data/exported_data/: rotation_test_quadrants.csv
tests/fixtures/: room_corner_frame.csv
tests/integration/: another_dewarp.py  generate_rotation_test_csvs.py  test_dewarp_room_corner.py  test_dewarping_correctness.py  test_dewarping_rotation_visual.py  test_flame_edge_synthetic.py  test_roomcorner_rotation_visual.py  test_roomcorner_with_rotation.py  test_synthetic_roomcorner.py
tests/test_utils/: test_math_utils.py
tests/unit/: test_IR_analysis.py  test_data_types.py  test_dataset_handler.py  test_dewarping.py  test_draggable_point.py  test_edgeworker.py  test_flamespread.py  test_imshow_canvas.py  test_main_window.py  test_plotting_utils.py  test_read_ir_data.py  test_selectable_imshow_canvas.py  test_user_config.py
tests/utils/: test_helpers.py
