[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "IR-reader"
version = "1.0.0"
description = ""
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Minh Tam Würzburger"},
    {name = "Marc Fehr"}
]

classifiers=[
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
    ]
dependencies = [
    "numpy"
]

[tool.setuptools]
packages = ["ir-reader","ir-reader.analysis","ir-reader.gui"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.urls]
Repository = "https://github.com/FireDynamics/IR-reader"