[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FlameTrack"
version = "1.0.6"
description = ""
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Minh Tam Würzburger"},
    {name = "Marc Fehr"}
]

classifiers=[
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
    ]
dependencies = [
    "numpy",
]

[project.scripts]
TrackFlame = "flametrack.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.urls]
Repository = "https://github.com/FireDynamics/IR-reader"