[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "FlameTrack"
description = "Python tool for image dewarping and flame front tracking in experimental fire research."
readme = "README.md"
dynamic = ["version"]
license = { file = "LICENSE" }
keywords = ["fire dynamics", "flame tracking", "image analysis", "computer vision"]
authors = [
    { name = "Minh Tam Würzburger" },
    { name = "Marc Fehr" }
]
maintainers = [
  {name = "Marc Fehr", email = "mfehr@uni-wuppertal.de"}
]
requires-python = ">=3.10, <3.14"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "PySide6<=6.9.0",
    "pyqtgraph",
    "opencv-python",
    "progressbar2",
    "scipy",
    "h5py",
    "plotly",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "ruff",
    "mypy",
    "scikit-image",
    "coverage[toml]",
    "sphinx",
    "sphinx-rtd-theme",
    "tomli; python_version<'3.11'",
    "pre-commit",
    "setuptools-scm"
]

[project.scripts]
FlameTrack = "flametrack.main:main"
flametrack = "flametrack.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.coverage.run]
branch = true
source = ["src/flametrack"]
omit = [
    "src/flametrack/gui/ui_form.py",
    "src/flametrack/__init__.py",
    "src/flametrack/analysis/__init__.py",
    "src/flametrack/gui/__init__.py",
    "src/flametrack/main.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov"
markers = [
    "rotation: mark test as related to rotation processing"
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["src/flametrack/gui/ui_form.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "PL"]
ignore = [
    "E501",     # line too long — handled by ruff format
    "PLR0913",  # too-many-arguments
    "PLR0914",  # too-many-locals
    "PLR0915",  # too-many-statements
    "PLR0917",  # too-many-positional-arguments
    "PLR2004",  # magic-value-comparison
    "PLW0603",  # global-statement
    "E731",     # lambda-assignment (used intentionally)
    "BLE001",   # blind-except (used intentionally)
    "B905",     # zip without strict= (not needed here)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "PLR2004"]
"*.ipynb" = ["E702", "W293", "B007"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

# Basis: sinnvolle Defaults, aber nicht Full-Strict:
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# GUI (PySide6/pyqtgraph haben oft keine Typstubs)
module = ["flametrack.gui.*"]
ignore_errors = true

[[tool.mypy.overrides]]
# Tests erstmal nicht blockieren
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
# Deine Kernlogik soll sauber bleiben/werden
module = ["flametrack.analysis.*", "flametrack.processing.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true


[project.urls]
Repository = "https://github.com/FireDynamics/FlameTrack"
